--- a/book.bib
+++ b/book.bib
@@ -469,3 +469,14 @@
   year={1994},
   publisher={Holt, Rinehart \& Winston, New York}
 }
+
+@article{thompson2012brief,
+  title={A brief index of affective job satisfaction},
+  author={Thompson, Edmund R and Phua, Florence TT},
+  journal={Group \& Organization Management},
+  volume={37},
+  number={3},
+  pages={275--307},
+  year={2012},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
