--- a/10-power_effect_size.Rmd
+++ b/10-power_effect_size.Rmd
@@ -209,7 +209,7 @@ This table indicates that assuming a population effect size of $\delta$ = .24 th
 
 ##### A different effect size?
 
-Sample size calculations use an estimate of the unknown population effect size. What happens to power if the population effect size is different than what we estimated. That information is conveyed in the graph below. An examination of this output might  cause you to adjust your sample size.
+Sample size calculations use an estimate of the unknown population effect size. What happens to power if the population effect size is different than what we estimated. That information is conveyed in the graph below. An examination of this output might  cause you to adjust your sample size. The style of the graph produced below was inspired by Dr. Richard Morey's excellent [web app](https://richarddmorey.github.io/jspower-site/) for power.
 
 
 ```{r}
