--- a/20-tools.Rmd
+++ b/20-tools.Rmd
@@ -2,17 +2,28 @@
 
 ## OSF
 
-You can pre-register your study and upload your study materials via a free account at the [OSF](https://osf.io). Don't forget you should also pre-register your outlier strategy. See [@leys2019classify] for guidance.
+You can pre-register your study and upload your study materials via a free account:
 
-[Leys, C., Delacre, M., Mora, Y. L., Lakens, D., & Ley, C. (2019). How to classify, detect, and manage univariate and multivariate outliers, with emphasis on pre-registration. International Review of Social Psychology, 32(1).](https://biblio.ugent.be/publication/8619726/file/8646347.pdf)
+* [OSF](https://osf.io)
 
-## Journal ranking via the TOP Factor
+Don't forget you should also pre-register your outlier strategy. See [@leys2019classify] for guidance.
 
-You can see journal rankings based on the Transparency and Openness Promotion Guidelines at the [Top Factor website](https://www.topfactor.org).
+* [Leys, C., Delacre, M., Mora, Y. L., Lakens, D., & Ley, C. (2019). How to classify, detect, and manage univariate and multivariate outliers, with emphasis on pre-registration. International Review of Social Psychology, 32(1).](https://biblio.ugent.be/publication/8619726/file/8646347.pdf)
+
+## Minimizing Mistakes
+
+I strongly encourage you to check out [@rouder2019minimizing] and [@strand2021error] to learn how to minimize mistakes in your research. 
+
+* [Rouder, J. N., Haaf, J. M., & Snyder, H. K. (2019). Minimizing mistakes in psychological science. Advances in Methods and Practices in Psychological Science, 2(1), 3-11.](https://doi.org/10.1177%2F2515245918801915)
+
+* [Strand, J. (2021). Error Tight: Exercises for Lab Groups to Prevent Research Mistakes.](https://psyarxiv.com/rsn5y)
+
 
 ## Writing articles
 
-I suggest you check out [Writing Empirical Articles: Transparency, Reproducibility, Clarity, and Memorability](https://doi.org/10.1177%2F2515245918754485) for excellent advice on writing articles (pictured below). Conversely, I suggest you AVOID "Writing the Empirical Journal Article" by Daryl Bem because this article has been described by some as a "how to guide" for p-hacking (i.e., finding the prettiest path in the garden of forking analysis paths).
+I suggest you check out [@gernsbacher2018writing] "Writing empirical articles: Transparency, reproducibility, clarity, and memorability. Advances in methods and practices in psychological science" for excellent advice on writing articles (pictured below). Conversely, I suggest you AVOID "Writing the Empirical Journal Article" by Daryl Bem because this article has been described by some as a "how to guide" for p-hacking (i.e., finding the prettiest path in the garden of forking analysis paths).
+
+* [Gernsbacher, M. A. (2018). Writing empirical articles: Transparency, reproducibility, clarity, and memorability. Advances in methods and practices in psychological science, 1(3), 403-414.](https://doi.org/10.1177%2F2515245918754485)
 
 ```{r, out.width="50%", echo=FALSE}
 knitr::include_graphics("images/gernsbacher.png")
@@ -20,13 +31,16 @@ knitr::include_graphics("images/gernsbacher.png")
 
 ## Statistics books
 
-* [Designing Experiments and Analyzing Data: A Model Comparison Perspective, Third Edition](https://www.amazon.ca/Designing-Experiments-Analyzing-Data-Perspective/dp/1138892289/ref=sr_1_1?dchild=1&qid=1629119503&refinements=p_27%3AKen+Kelley&s=books&sr=1-1&text=Ken+Kelley) by Maxwell, Delaney, and Kelley. This book has a fantastic website ([https://designingexperiments.com](https://designingexperiments.com)) with online tools and R scripts. 
+[@maxwell2017designing] [@cohen2014applied] [@baguley2012serious]
 
-* [Applied Multiple Regression/Correlation Analysis for the Behavioral Sciences](https://www.amazon.ca/Multiple-Regression-Correlation-Analysis-Behavioral/dp/0805822232) by Cohen, Cohen, West, and Aiken. This is the "go to" resource if you are conducting moderated multiple regression. A great book on regression beyond just moderation though.
 
-* [Serious Stats: A guide to advanced statistics for the behavioral sciences](https://www.amazon.ca/Serious-Stats-advanced-statistics-behavioral/dp/0230577180/ref=sr_1_1?dchild=1&keywords=serious+stats&qid=1629126084&sr=8-1) by Baguley. The book title tells you everything you need to know about this one.
+* [Maxwell, S. E., Delaney, H. D., & Kelley, K. (2017). Designing experiments and analyzing data: A model comparison perspective. Routledge.](https://www.amazon.ca/Designing-Experiments-Analyzing-Data-Perspective/dp/1138892289/ref=sr_1_1?dchild=1&qid=1629119503&refinements=p_27%3AKen+Kelley&s=books&sr=1-1&text=Ken+Kelley) by Maxwell, Delaney, and Kelley. This book has a fantastic website ([https://designingexperiments.com](https://designingexperiments.com)) with online tools and R scripts. 
 
-* [PROCESS book and macro](https://processmacro.org/index.html). From the website: "PROCESS is an observed variable OLS and logistic regression path analysis modeling tool. It is widely used through the social, business, and health sciences for estimating direct and indirect effects in single and multiple mediator models (parallel and serial) , two and three way interactions in moderation models along with simple slopes and regions of significance for probing interactions, and conditional indirect effects in moderated mediation models with a single or multiple mediators or moderators.  The use of PROCESS is described and documented in Introduction to Mediation, Moderation, and Conditional Process Analysis, published by The Guilford Press.  PROCESS was written by Andrew F. Hayes."
+* [Cohen, J., Cohen, P., West, S. G., & Aiken, L. S. (2014). Applied multiple regression/correlation analysis for the behavioral sciences. Psychology press.](https://www.amazon.ca/Multiple-Regression-Correlation-Analysis-Behavioral/dp/0805822232) by Cohen, Cohen, West, and Aiken. This is the "go to" resource if you are conducting moderated multiple regression. A great book on regression beyond just moderation though.
+
+* [Baguley, T. (2012). Serious stats: A guide to advanced statistics for the behavioral sciences. Macmillan International Higher Education.](https://www.amazon.ca/Serious-Stats-advanced-statistics-behavioral/dp/0230577180/ref=sr_1_1?dchild=1&keywords=serious+stats&qid=1629126084&sr=8-1) by Baguley. The book title tells you everything you need to know about this one.
+
+* [Hayes, A. F. (2017). Introduction to mediation, moderation, and conditional process analysis: A regression-based approach. Guilford publications.](https://www.amazon.ca/Introduction-Mediation-Moderation-Conditional-Analysis/dp/1609182308/ref=sr_1_3?dchild=1&keywords=Introduction+to+mediation%2C+moderation%2C+and+conditional+process+analysis%3A+A+regression-based+approach.+Guilford+publications.&qid=1629717582&sr=8-3). Many people use the approach in this book when they have multiple mediators and moderators. The PROCESS [website]((https://processmacro.org/index.html) has the R-script for the PROCESS macro.
 
 ## R books
 
@@ -93,6 +107,9 @@ If you don't want to learn rmarkdown you may find the [apaTables](https://cran.r
 knitr::include_graphics("ch_tools/images/apaTables_paper.png")
 ```
 
+## Journal ranking via the TOP Factor
+
+You can see journal rankings based on the Transparency and Openness Promotion Guidelines at the [Top Factor website](https://www.topfactor.org).
 
 
 ## statcheck
