--- a/book.bib
+++ b/book.bib
@@ -480,3 +480,53 @@
   year={2012},
   publisher={Sage Publications Sage CA: Los Angeles, CA}
 }
+
+@article{rouder2019minimizing,
+  title={Minimizing mistakes in psychological science},
+  author={Rouder, Jeffrey N and Haaf, Julia M and Snyder, Hope K},
+  journal={Advances in Methods and Practices in Psychological Science},
+  volume={2},
+  number={1},
+  pages={3--11},
+  year={2019},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{strand2021error,
+  title={Error Tight: Exercises for Lab Groups to Prevent Research Mistakes},
+  author={Strand, Julia},
+  year={2021},
+  publisher={PsyArXiv}
+}
+
+@article{gernsbacher2018writing,
+  title={Writing empirical articles: Transparency, reproducibility, clarity, and memorability},
+  author={Gernsbacher, Morton Ann},
+  journal={Advances in methods and practices in psychological science},
+  volume={1},
+  number={3},
+  pages={403--414},
+  year={2018},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@book{maxwell2017designing,
+  title={Designing experiments and analyzing data: A model comparison perspective},
+  author={Maxwell, Scott E and Delaney, Harold D and Kelley, Ken},
+  year={2017},
+  publisher={Routledge}
+}
+
+@book{cohen2014applied,
+  title={Applied multiple regression/correlation analysis for the behavioral sciences},
+  author={Cohen, Jacob and Cohen, Patricia and West, Stephen G and Aiken, Leona S},
+  year={2014},
+  publisher={Psychology press}
+}
+
+@book{baguley2012serious,
+  title={Serious stats: A guide to advanced statistics for the behavioral sciences},
+  author={Baguley, Thomas},
+  year={2012},
+  publisher={Macmillan International Higher Education}
+}
