--- a/18-mmr.Rmd
+++ b/18-mmr.Rmd
@@ -104,7 +104,10 @@ knitr::include_graphics("ch_mmr/images/mmr_int.png")
 
 ### Comparison
 
-We present both graphs below so you can more easily see the difference between them.
+We present both graphs below so you can more easily see the difference between them. When you look at the *No Interaction* graph you can see the best-fit surface is composed of a series of straight lines that are parallel (i.e., all have the same slope) but all orientated a particular angle. In contrast, when you look at the *Interaction* graph you can see that it is also composed of a series of straight lines but the overall surface looks curves because the lines composing the best-fit surface have different slopes. 
+
+**Interpretation note:** Notice that the difference between the *No Interaction* surface and the *Interaction* surface is the largest near the edges of the surface. Consequently, the inclusion of product terms typically makes the largest improvement in fit for the people who score at the extremes of the surface. In contrast, the inclusion of product terms typically makes a minor inmpovement in fit for the people who are near the middle of the surface. Keep that in mind as you interpret the increase in fit that results from the inclusion of the product terms.
+
 
 ```{r, echo = FALSE, out.width="90%"}
 knitr::include_graphics("ch_mmr/images/mmr_both.png")
