--- a/20-tools.Rmd
+++ b/20-tools.Rmd
@@ -29,33 +29,9 @@ I suggest you check out [@gernsbacher2018writing] "Writing empirical articles: T
 knitr::include_graphics("images/gernsbacher.png")
 ```
 
-## Statistics books
+## Writing with R
 
-[@maxwell2017designing] [@cohen2014applied] [@baguley2012serious]
-
-
-* [Maxwell, S. E., Delaney, H. D., & Kelley, K. (2017). Designing experiments and analyzing data: A model comparison perspective. Routledge.](https://www.amazon.ca/Designing-Experiments-Analyzing-Data-Perspective/dp/1138892289/ref=sr_1_1?dchild=1&qid=1629119503&refinements=p_27%3AKen+Kelley&s=books&sr=1-1&text=Ken+Kelley) by Maxwell, Delaney, and Kelley. This book has a fantastic website ([https://designingexperiments.com](https://designingexperiments.com)) with online tools and R scripts. 
-
-* [Cohen, J., Cohen, P., West, S. G., & Aiken, L. S. (2014). Applied multiple regression/correlation analysis for the behavioral sciences. Psychology press.](https://www.amazon.ca/Multiple-Regression-Correlation-Analysis-Behavioral/dp/0805822232) by Cohen, Cohen, West, and Aiken. This is the "go to" resource if you are conducting moderated multiple regression. A great book on regression beyond just moderation though.
-
-* [Baguley, T. (2012). Serious stats: A guide to advanced statistics for the behavioral sciences. Macmillan International Higher Education.](https://www.amazon.ca/Serious-Stats-advanced-statistics-behavioral/dp/0230577180/ref=sr_1_1?dchild=1&keywords=serious+stats&qid=1629126084&sr=8-1) by Baguley. The book title tells you everything you need to know about this one.
-
-* [Hayes, A. F. (2017). Introduction to mediation, moderation, and conditional process analysis: A regression-based approach. Guilford publications.](https://www.amazon.ca/Introduction-Mediation-Moderation-Conditional-Analysis/dp/1609182308/ref=sr_1_3?dchild=1&keywords=Introduction+to+mediation%2C+moderation%2C+and+conditional+process+analysis%3A+A+regression-based+approach.+Guilford+publications.&qid=1629717582&sr=8-3). Many people use the approach in this book when they have multiple mediators and moderators. The PROCESS [website]((https://processmacro.org/index.html) has the R-script for the PROCESS macro.
-
-## R books
-
-There are many R books out there. I believe that you will find these most helpful:
-
-* [R for Data Science](https://r4ds.had.co.nz) by Wickham and Grolemund. Free.
-
-* [Hands-On Programming with R](https://rstudio-education.github.io/hopr/) by Grolemund. Free.
-
-* [Advanced R](https://adv-r.hadley.nz) by Wickham. Free.
-
-* [Art of R Programming](https://nostarch.com/artofr.htm) by Matloff.
-
-
-## R packages
+The packages described below are very helpful for learning to write papers within RStudio. 
 
 ### rmarkdown / bookdown
 
@@ -106,6 +82,34 @@ If you don't want to learn rmarkdown you may find the [apaTables](https://cran.r
 ```{r, echo = FALSE, out.width = "60%", cap = "apaTables paper header"}
 knitr::include_graphics("ch_tools/images/apaTables_paper.png")
 ```
+
+
+## Statistics books
+
+[@maxwell2017designing] [@cohen2014applied] [@baguley2012serious]
+
+
+* [Maxwell, S. E., Delaney, H. D., & Kelley, K. (2017). Designing experiments and analyzing data: A model comparison perspective. Routledge.](https://www.amazon.ca/Designing-Experiments-Analyzing-Data-Perspective/dp/1138892289/ref=sr_1_1?dchild=1&qid=1629119503&refinements=p_27%3AKen+Kelley&s=books&sr=1-1&text=Ken+Kelley) by Maxwell, Delaney, and Kelley. This book has a fantastic website ([https://designingexperiments.com](https://designingexperiments.com)) with online tools and R scripts. 
+
+* [Cohen, J., Cohen, P., West, S. G., & Aiken, L. S. (2014). Applied multiple regression/correlation analysis for the behavioral sciences. Psychology press.](https://www.amazon.ca/Multiple-Regression-Correlation-Analysis-Behavioral/dp/0805822232) by Cohen, Cohen, West, and Aiken. This is the "go to" resource if you are conducting moderated multiple regression. A great book on regression beyond just moderation though.
+
+* [Baguley, T. (2012). Serious stats: A guide to advanced statistics for the behavioral sciences. Macmillan International Higher Education.](https://www.amazon.ca/Serious-Stats-advanced-statistics-behavioral/dp/0230577180/ref=sr_1_1?dchild=1&keywords=serious+stats&qid=1629126084&sr=8-1) by Baguley. The book title tells you everything you need to know about this one.
+
+* [Hayes, A. F. (2017). Introduction to mediation, moderation, and conditional process analysis: A regression-based approach. Guilford publications.](https://www.amazon.ca/Introduction-Mediation-Moderation-Conditional-Analysis/dp/1609182308/ref=sr_1_3?dchild=1&keywords=Introduction+to+mediation%2C+moderation%2C+and+conditional+process+analysis%3A+A+regression-based+approach.+Guilford+publications.&qid=1629717582&sr=8-3). Many people use the approach in this book when they have multiple mediators and moderators. The PROCESS [website]((https://processmacro.org/index.html) has the R-script for the PROCESS macro.
+
+## General R books
+
+There are many R books out there. I believe that you will find these most helpful:
+
+* [R for Data Science](https://r4ds.had.co.nz) by Wickham and Grolemund. Free.
+
+* [Hands-On Programming with R](https://rstudio-education.github.io/hopr/) by Grolemund. Free.
+
+* [Advanced R](https://adv-r.hadley.nz) by Wickham. Free.
+
+* [Art of R Programming](https://nostarch.com/artofr.htm) by Matloff.
+
+
 
 ## Journal ranking via the TOP Factor
 
