--- a/20-tools.Rmd
+++ b/20-tools.Rmd
@@ -83,6 +83,9 @@ If you don't want to learn rmarkdown you may find the [apaTables](https://cran.r
 knitr::include_graphics("ch_tools/images/apaTables_paper.png")
 ```
 
+## Journal ranking via the TOP Factor
+
+When you're done writing - you need to decide upon a journal. You can see journal rankings based on the Transparency and Openness Promotion Guidelines at the [Top Factor website](https://www.topfactor.org).
 
 ## Statistics books
 
@@ -108,12 +111,6 @@ There are many R books out there. I believe that you will find these most helpfu
 * [Advanced R](https://adv-r.hadley.nz) by Wickham. Free.
 
 * [Art of R Programming](https://nostarch.com/artofr.htm) by Matloff.
-
-
-
-## Journal ranking via the TOP Factor
-
-You can see journal rankings based on the Transparency and Openness Promotion Guidelines at the [Top Factor website](https://www.topfactor.org).
 
 
 ## statcheck
