--- a/20-tools.Rmd
+++ b/20-tools.Rmd
@@ -10,7 +10,7 @@ Don't forget you should also pre-register your outlier strategy. See [@leys2019c
 
 * [Leys, C., Delacre, M., Mora, Y. L., Lakens, D., & Ley, C. (2019). How to classify, detect, and manage univariate and multivariate outliers, with emphasis on pre-registration. International Review of Social Psychology, 32(1).](https://biblio.ugent.be/publication/8619726/file/8646347.pdf)
 
-## Minimizing Mistakes
+## Minimizing mistakes
 
 I strongly encourage you to check out [@rouder2019minimizing] and [@strand2021error] to learn how to minimize mistakes in your research. 
 
