--- a/20-tools.Rmd
+++ b/20-tools.Rmd
@@ -134,8 +134,7 @@ When you're done writing - you need to decide upon a journal. You can see journa
 
 ## Statistics books
 
-[@maxwell2017designing] [@cohen2014applied] [@baguley2012serious]
-
+If you want to learn more about statistics I suggest [@maxwell2017designing], [@cohen2014applied], and [@baguley2012serious].
 
 * [Maxwell, S. E., Delaney, H. D., & Kelley, K. (2017). Designing experiments and analyzing data: A model comparison perspective. Routledge.](https://www.amazon.ca/Designing-Experiments-Analyzing-Data-Perspective/dp/1138892289/ref=sr_1_1?dchild=1&qid=1629119503&refinements=p_27%3AKen+Kelley&s=books&sr=1-1&text=Ken+Kelley) by Maxwell, Delaney, and Kelley. This book has a fantastic website ([https://designingexperiments.com](https://designingexperiments.com)) with online tools and R scripts. 
 
