--- a/20-tools.Rmd
+++ b/20-tools.Rmd
@@ -19,6 +19,17 @@ I strongly encourage you to check out [@rouder2019minimizing] and [@strand2021er
 * [Strand, J. (2021). Error Tight: Exercises for Lab Groups to Prevent Research Mistakes.](https://psyarxiv.com/rsn5y)
 
 
+## Avoiding *p*-hacking
+
+See both of these articles [@wicherts2016degrees; @stratton2005ensure] to obtain real advice on how to avoid *p*-hacking and other problems.
+
+* [Wicherts, J. M., Veldkamp, C. L., Augusteijn, H. E., Bakker, M., Van Aert, R., & Van Assen, M. A. (2016). Degrees of freedom in planning, running, analyzing, and reporting psychological studies: A checklist to avoid p-hacking. Frontiers in psychology, 7, 1832.](https://doi.org/10.3389/fpsyg.2016.01832)
+
+* [Stratton, I. M., & Neil, A. (2005). How to ensure your paper is rejected by the statistical reviewer. Diabetic medicine, 22(4), 371-373](http://gornbein.bol.ucla.edu/how%20to%20ensure%20rejection.pdf). Obviously, the advice in this article is "reverse-keyed".
+
+* Also don't forget about the [Guelph Psychology Department Thesis Guidelines Website](https://www.uoguelph.ca/psychology/graduate/thesis-statistics). The website is largely based on the advice of [@wicherts2016degrees] but is slightly broader in focus and provides Department specific advice.
+
+
 ## Writing articles
 
 I suggest you check out [@gernsbacher2018writing] "Writing empirical articles: Transparency, reproducibility, clarity, and memorability. Advances in methods and practices in psychological science" for excellent advice on writing articles (pictured below). Conversely, I suggest you AVOID "Writing the Empirical Journal Article" by Daryl Bem because this article has been described by some as a "how to guide" for p-hacking (i.e., finding the prettiest path in the garden of forking analysis paths).
