--- a/book.bib
+++ b/book.bib
@@ -530,3 +530,23 @@
   year={2012},
   publisher={Macmillan International Higher Education}
 }
+
+@article{stratton2005ensure,
+  title={How to ensure your paper is rejected by the statistical reviewer},
+  author={Stratton, IM and Neil, A},
+  journal={Diabetic medicine},
+  volume={22},
+  number={4},
+  pages={371--373},
+  year={2005}
+}
+
+@article{wicherts2016degrees,
+  title={Degrees of freedom in planning, running, analyzing, and reporting psychological studies: A checklist to avoid p-hacking},
+  author={Wicherts, Jelte M and Veldkamp, Coosje LS and Augusteijn, Hilde EM and Bakker, Marjan and Van Aert, Robbie and Van Assen, Marcel ALM},
+  journal={Frontiers in psychology},
+  volume={7},
+  pages={1832},
+  year={2016},
+  publisher={Frontiers}
+}
