--- a/20-tools.Rmd
+++ b/20-tools.Rmd
@@ -21,7 +21,7 @@ I strongly encourage you to check out [@rouder2019minimizing] and [@strand2021er
 
 ## Avoiding *p*-hacking
 
-See both of these articles [@wicherts2016degrees; @stratton2005ensure] to obtain real advice on how to avoid *p*-hacking and other problems.
+See both of these articles [@wicherts2016degrees; @stratton2005ensure] to obtain advice on how to avoid *p*-hacking and other problems.
 
 * [Wicherts, J. M., Veldkamp, C. L., Augusteijn, H. E., Bakker, M., Van Aert, R., & Van Assen, M. A. (2016). Degrees of freedom in planning, running, analyzing, and reporting psychological studies: A checklist to avoid p-hacking. Frontiers in psychology, 7, 1832.](https://doi.org/10.3389/fpsyg.2016.01832)
 
